GaidaParserUE01/bin/test/MyNewGrammar.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.17+ wizard for JavaCC 1.5.0+
 */options{  JDK_VERSION = "1.5";  static = true;}PARSER_BEGIN(EG1)package test;

import java.io.FileInputStream;
import java.io.InputStream;

public class EG1{  public static void main(String args []) throws ParseException  {      try      {
    InputStream stream= new FileInputStream("intputFiles/TEST2.justy");
    EG1 parser = new EG1(stream);        EG1.file();
        System.out.println("OK. YOU ARE THE BEST");      }      catch (Exception e)      {        System.out.println("NOK.");        System.out.println(e.getMessage());        EG1.ReInit(System.in);      }      catch (Error e)      {        System.out.println("Oops.");        System.out.println(e.getMessage());    }  }}PARSER_END(EG1)SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN : /* OPERATORS */
{
  < PLUS : "+" >
| < MINUS : "-" >
| < MULTIPLY : "*" >
| < DIVIDE : "/" >
}

TOKEN : /*  */
{
  < PROGRAM : "program" >
| < VAR : "var" >
| < CALL : "call" >
| < IMPORT : "import" >
| < RETURN : "return" >
| < BYREF : "byref" >
| < COROUTINE : "coroutine" >
| < SYNCHRONIZED : "synchronized" >
| < NEW : "new" >
| < POINT : "." >
| < TRUE : "true" >
| < FALSE : "false" >
| < END : ";" >
| < SEPERATOR : "," >
}

TOKEN :
{
  < OR : "||" >
| < AND : "&&" >
}

TOKEN : /* BRACES */
{
  < OPEN_CURLY : "{" >
| < CLOSE_CURLY : "}" >
| < OPEN : "(" >
| < CLOSE : ")" >
| < OPEN_RECT : "[" >
| < CLOSE_RECT : "]" >
}

TOKEN :
{
  < EQUAL : "==" >
| < NOT_EQUAL : "!=" >
| < SMALLER : "<" >
| < GREATOR : ">" >
| < SMALLER_EQUAL : "<=" >
| < GREATOR_EQUAL : ">=" >
| < NOT : "|" >
}

TOKEN : /* TYPES */
{
  < INT : "int" >
| < BOOL : "boolean" >
| < VOID : "void" >
| < ARRAY : (< OPEN_RECT > < CLOSE_RECT >) >
}

TOKEN : /* IF */
{
  < IF : "if" >
| < ELSE : "else" >
}

TOKEN : /* WHILE */
{
  < DO : "do" >
| < WHILE : "while" >
}

TOKEN : /* ASSIGN OPERATORS */
{
  < ASSIGN : "=" >
}

TOKEN :
{
  < IDENTIFIER :
    (
      < LOWER_LETTER >
    | < UPPER_LETTER >
    )
    (
      < LOWER_LETTER >
    | < UPPER_LETTER >
    | < NUMBER >
    )* 
    >
| < #LOWER_LETTER : [ "a"-"z" ] >
| < #UPPER_LETTER : [ "A"-"Z" ] >
}

TOKEN :
{
  < NUMBER : (< DIGIT >)+ >
| < #DIGIT : [ "0"-"9" ] >
}

void file() :
{}
{
  (< IMPORT > < IDENTIFIER > < END >)* program()
}

void program() :
{}
{
  < PROGRAM > < IDENTIFIER > < OPEN_CURLY > programDef() < CLOSE_CURLY >
}

void programDef() :
{}
{
  (
    varDef()
  | funcDef()
  )*
}

void type() :
{}
{
  (
    < VOID >
  | < INT >
  | < BOOL >
  )
}

void funcDef() :
{}
{
  (< COROUTINE >
  )? type() < IDENTIFIER > < OPEN > funcParamList() < CLOSE > block()
}

void funcParamList() :
{}
{
  (
    (< BYREF >
    )? funcParam()
    (
      < SEPERATOR > 
      (
      < BYREF >
      )? funcParam()
    )*
  )?
}

void funcParam() :
{}
{
  type() < IDENTIFIER >
}

void varDef() :
{}
{
  < VAR > 
  type() 
  (< ARRAY >
  )? 
  < IDENTIFIER >
  (
    < ASSIGN > 
    expr()
  )?
  < END >
}

void block() :
{}
{
  < OPEN_CURLY >
  (
    varDef()
  | stat()
  )*
  < CLOSE_CURLY >
}

void stat() :
{}
{
  block()
| assignStat()
| ifStat()
| callStat()
| whileStat()
| synchronizedStat()
| returnStat()
}

void assignStat() :
{}
{
  var() < ASSIGN > expr() < END >
}

void callStat() :
{}
{
  < CALL > call() < END >
}

void ifStat() :
{}
{
  < IF > < OPEN > expr() < CLOSE > stat()
  (
    < ELSE > stat()
  )?
}

void whileStat() :
{}
{
  < WHILE > < OPEN > expr() < CLOSE > stat()
}

void synchronizedStat() :
{}
{
  < SYNCHRONIZED > 
  < OPEN > 
  expr() 
  < CLOSE > 
  stat()
}

void returnStat() :
{}
{
  < RETURN >
  (
    expr()
  )?
  < END >
}

void call() :
{}
{
  var() < OPEN > actParamList() < CLOSE >
}

void expr() :
{}
{
  orExpr()
}

void orExpr() :
{}
{
  andExpr()
  (
    < OR > andExpr()
  )*
}

void andExpr() :
{}
{
  relExpr()
  (
    < AND > relExpr()
  )*
}

void relExpr() :
{}
{
  simpleExpr()
  (
    comparisonOperator() 
    simpleExpr()
  )*
}

void comparisonOperator() :
{}
{
  < EQUAL >
| < NOT_EQUAL >
| < SMALLER >
| < GREATOR >
| < SMALLER_EQUAL >
| < GREATOR_EQUAL >
}

void simpleExpr() :
{}
{
  (
    < PLUS >
  | < MINUS >
  )?
  term()
  (
    (
      < PLUS >
    | < MINUS >
    )
    term()
  )*
}

void term() :
{}
{
  notFactor()
  (
    (
      < MULTIPLY >
    | < DIVIDE >
    )
    notFactor()
  )*
}

void notFactor() :
{}
{
  (
  < NOT >)? factor()
}

void factor() :
{}
{
  < NUMBER >
| var()
| callStat()
|
  (
    < OPEN > expr() < CLOSE >
  )
|
  (
    < NEW > 
    type()
    (
      < OPEN_RECT >
      (
        var()
      | < NUMBER >
      )
      < CLOSE_RECT >
    )?
  )
| < TRUE >
| < FALSE >
}

void var() :
{}
{
  < IDENTIFIER >
  (
    // ARRAY
    (
      < OPEN_RECT >
      (
        var()
      | < NUMBER >
      )
      < CLOSE_RECT >
    )
    // sub var
  |
    (
      < POINT > 
      var()
    )
  )*
}

void actParamList() :
{}
{
  (
    expr()
    (
      < SEPERATOR > expr()
    )*
  )?
}
